# 16th-TripWay

./: .env.template  .gitignore  Makefile  Procfile  README.md  TripWay database 0514  TripWay database 0514.sql  build.js  package-lock.json  package.json  pyproject.toml  requirements.txt  seed.py  tailwind.config.js
blogs/: apps.py  forms.py  models.py  urls.py  views.py
blogs/migrations/: 0001_initial.py  0002_alter_blog_content_blogcomment.py  0003_article.py  0003_blog_user_alter_blogcomment_user.py  0004_delete_article.py  0005_merge_20240611_0618.py  0006_blog_spot_blog_spot_name_alter_blog_user_and_more.py  0007_alter_blog_content.py  0008_remove_blogcomment_rating.py  0009_imagemodel_blog_views.py  0010_blog_created_at.py
comments/: admin.py  forms.py  models.py  urls.py  views.py
comments/migrations/: 0001_initial.py  0002_comment_value_delete_rating.py  0002_initial.py  0003_comment_spot_comment_user.py  0004_alter_comment_spot.py
core/: settings.py  urls.py
members/: admin.py  forms.py  models.py  urls.py  views.py
members/migrations/: 0001_initial.py  0002_alter_member_image.py  0002_alter_member_level.py  0002_member_image.py  0002_member_level.py  0002_memberspot.py  (+6 more)
notifies/: apps.py  context_processors.py  models.py  urls.py  views.py
payments/: models.py  service.py  urls.py  views.py
schedels/: apps.py  models.py
schedules/: models.py  urls.py  views.py
spots/: admin.py  apps.py  form.py  models.py  urls.py  views.py
src/: tailwind.css
templates/: home.html
trips/: admin.py  forms.py  models.py  urls.py  views.py
(+136 files in other folders)
