[tool.poetry]
name = "tripway"
version = "0.1.0"
description = ""
authors = ["Josh Lin <mingyi1223@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
psycopg = "^3.1.18"
django-allauth = {extras = ["socialaccount"], version = "^0.62.1"}
python-dotenv = "^1.0.1"
ipython = "^8.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
