[tool.poetry]
name = "tripway"
version = "0.1.0"
description = ""
authors = ["TripWay Dev <mingyi1223@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
psycopg = "^3.1.18"
psycopg2 = "^2.9.9"
django-allauth = {extras = ["socialaccount"], version = "^0.62.1"}
python-dotenv = "^1.0.1"
cryptography = "^42.0.7"
pillow = "^10.3.0"
requests = "^2.32.2"
django-storages = "^1.14.3"
boto3 = "^1.34.113"
googlemaps = "^4.10.0"
hanziconv = "^0.3.2"
qrcode = "^7.4.2"
gunicorn = "^22.0.0"
whitenoise = "^6.6.0"
django-heroku = "^0.3.1"
django-cors-headers = "^4.3.1"
django-ckeditor = "^6.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
